# evm-db

./: .gitignore  CMakeLists.txt  README.md
config/: evmdb.toml
include/evmdb/: block.h  config.h  crypto.h  evm.h  hex.h  log.h  rpc.h  state.h  types.h
scripts/: run.sh  test.sh
src/: main.c
src/block/: producer.c  tx.c
src/core/: config.c  hex.c  keccak.c  log.c
src/evm/: executor.c  gas.c
src/net/: tcp.c
src/rpc/: handlers.c  json.c  server.c
src/state/: accounts.c  redis_state.c
tests/: test_crypto.c  test_evm.c  test_hex.c  test_rpc.c  test_state.c  test_tx.c
